Added relay fee for EVM chains
