# resources/model_fee_estimate_request_relationships.go
@@ -1,0 +1,10 @@
+/*
+ * GENERATED. Do not modify. Your changes might be overwritten!
+ */
+
+package resources
+
+type FeeEstimateRequestRelationships struct {
+	Confirmation Relation `json:"confirmation"`
+	Transfer     Relation `json:"transfer"`
+}
