# resources/model_resource_type.go
@@ -9,6 +9,7 @@ type ResourceType string
 // List of ResourceType
 const (
 	CONFIRMATIONS ResourceType = "confirmations"
+	FEE_ESTIMATES ResourceType = "fee_estimates"
 	RELAY_TASKS   ResourceType = "relay_tasks"
 	TRANSFERS     ResourceType = "transfers"
 )
